Changes to use JDK 20 and virtual threads (preview feature)